--- a/09_Theme_08_v2/assets/stylesheet/responsive.css
+++ b/09_Theme_08_v2/assets/stylesheet/responsive.css
@@ -1169,7 +1169,9 @@ website:   	http://www.themesmart.net/
         margin-top: 10px;
         margin-left: 0px;
     }
-
+    .add-to-cart .pull-left {
+        margin-right: 20px;
+    }
     .nav-tabs.product-tabs > li > a {
         width: 100%;
     }
