--- a/09_Theme_08_v2/Views/Product/Index.cshtml
+++ b/09_Theme_08_v2/Views/Product/Index.cshtml
@@ -195,8 +195,10 @@
                                             @if (ViewData["relateProduct"] != null)
                                             {
                                                 AnperoFrontend.WebService.SearchResult relateProduct = (AnperoFrontend.WebService.SearchResult)ViewData["relateProduct"];
+
                                                 if (relateProduct.Item != null && relateProduct.Item.Length > 0)
                                                 {
+                                                   // relateProduct.Item= relateProduct.Item.Where(x => x.Id != item.Id);
                                                     foreach (var items in relateProduct.Item)
                                                     {
                                                         <div class="item">
@@ -238,7 +240,7 @@
                                                             </div>
                                                         </div>
                                                     }
-                                                }
+                                            }
                                             }
                                         </div>
                                     </div>
