--- a/09_Theme_08_v2/Views/Shared/_partial/_HomeSlide_1.cshtml
+++ b/09_Theme_08_v2/Views/Shared/_partial/_HomeSlide_1.cshtml
@@ -13,7 +13,10 @@
                         <li data-transition='random' data-slotamount='7' data-masterspeed='1000' data-thumb='@item.ImagesUrl'>
                             <img src="@item.ImagesUrl"/>
                             <div class="info">
-                                @Html.Raw(item.Description)
+                                <a href="@item.ClickUrl">
+                                    @Html.Raw(item.Description)
+                                </a>
+                                
                             </div>
                         </li>                        
                         }
