--- a/04_Shop_multiProduct/Views/Home/Index.cshtml
+++ b/04_Shop_multiProduct/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
 <div class="container">
     <div class="lct">
         <div class="column col-xs-12 col-sm-3" id="left_column">
-            @Html.Partial("product/_MenuAndAdsPartial")
+        @ViewBag.rd  @Html.Partial("product/_MenuAndAdsPartial")
         </div>
     </div>
     <div class="col-md-9">
