--- a/06_Shop_Onepage/Views/Shared/_Layout.cshtml
+++ b/06_Shop_Onepage/Views/Shared/_Layout.cshtml
@@ -105,13 +105,14 @@
                             <h2>Tin tức</h2>
                             <div class="news-list">
                                 <ul>
-                                    <li><a href="/thong-tin-cap-nhat-he-thong-b114">Thông tin cập nhật</a></li>
-                                    <li><a href="/huong-dan-su-dung-b115">Hướng dẫn sử dụng</a></li>
-                                    <li><a href="/gioi-thieu-b113">Giới thiệu</a></li>
+
+
+
                                     <li><a href="/blog">Blog</a></li>
-                                    <li><a href="/blogs">Hướng dẫn thanh toán</a></li>
+                                    <li><a href="/PaymentInfo">Hướng dẫn thanh toán</a></li>
                                     <li><a href="/WarrantyPolicy">Chính sách bảo hành</a></li>
                                     <li><a href="/PrivacyPolicy">Chính sách bảo mật</a></li>
+                                    <li><a href="/shippolicy">Chính sách vận chuyển</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -189,290 +190,6 @@
     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit2"></script>
     <!-- Go to www.addthis.com/dashboard to customize your tools -->
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5b7a515bc8da872d"></script>
-
-    <script type="text/javascript">
-        function fixMobileDisplay() {
-            if ($(".navbar-toggle").is(":visible")) {
-                var menuHeigth = $(".menu-header").height();
-                var fromEmailHeigth = 0;
-                var adsHeight = 0;
-                if ($(".form-email-jobs").is(":visible")) {
-                    fromEmailHeigth = $(".form-email-jobs").height();
-                }
-                if ($("#div-gpt-ad-banner-1").is(":visible")) {
-                    adsHeight = $("#div-gpt-ad-banner-1").height();
-                }
-                $(".form-email-jobs").css({ "position": "fixed", "top": parseInt(adsHeight) + parseInt(menuHeigth) + "px", "margin": "0", "z-index": "9999", "left": "0" });
-                $("#BreadCrumb").css({ "margin-top": parseInt(adsHeight) + parseInt(menuHeigth) + parseInt(fromEmailHeigth) + "px" });
-            }
-        }
-            
-        $(document).ready(function () {
-
-            $('.see-less-more').click(function () {
-                var less = $(this).attr('less');
-                var more = $(this).attr('more');
-                if (!$(this).parents('div:first').find('.short-string').hasClass('hidden')) {
-                    $(this).parents('div:first').find('.short-string').addClass('hidden');
-                    $(this).parents('div:first').find('.long-string').removeClass('hidden');
-                    $(this).html(less);
-                }
-                else {
-                    $(this).parents('div:first').find('.short-string').removeClass('hidden');
-                    $(this).parents('div:first').find('.long-string').addClass('hidden');
-                    $(this).html(more);
-                }
-            });
-            if ($("#ltrNavigator").length) {
-                if ($("#ltrNavigator").html().indexOf("There are no jobs") >= 0) {
-                    $.ajax({
-                        type: 'POST',
-                        url: '/Services/wsJobPosting.asmx/SuggestSearch',
-                        data: "{allkeywords:'" + $("#<%=hdAllKeywords.ClientID %>").val() + "'}",
-                        contentType: "application/json; charset=utf-8",
-                        dataType: "json",
-                        beforeSend: function (data) {
-                            $(".box-load").show();
-                        },
-                        success: function (resp) {
-                            $("#divNoJobs").show();
-                            $(".box-load").hide();
-                            if (resp.Code == "1") {
-                                $("#divNoJobs").find("ul li ul").html(resp.Result);
-                            }
-                            else {
-
-                            }
-                        }
-                    });
-                }
-            }
-            try {
-                if ($("#job-alert-registration-form").length) {
-                    re_captcha_signup = grecaptcha.render('re_captcha_signup', {
-                        'sitekey': '<%=ApplyDirect.Common.Web.AppConfigurationInfo.Recaptcha_SiteKey %>'
-                    });
-                }
-                if ($(".form-email-jobs").length) {
-                    re_captcha_signup_float = grecaptcha.render('re_captcha_signup_float', {
-                        'sitekey': '<%=ApplyDirect.Common.Web.AppConfigurationInfo.Recaptcha_SiteKey %>'
-                    });
-                }
-                if ($("#sendEmailModal").length) {
-                    recapchar_sendmailFriend = grecaptcha.render('re_captcha_sendemail_tofriend', {
-                        'sitekey': '<%=ApplyDirect.Common.Web.AppConfigurationInfo.Recaptcha_SiteKey %>'
-                    });
-                }
-            } catch (e) {
-
-            }
-          
-         
-           
-            $("#ddl-country").change(function () {
-                $("#divStateAlert #lb-state").hide();
-                if ($("#ddl-country option:selected").text().toLowerCase() == "australia") {
-                    Ultil.GetStateByCountry($("#ddl-country").val());
-                    $("#divStateAlert").show();
-                } else if (parseInt($("#ddl-country").val()) > 0) {
-                    $("#ddl-state").html("<option value='-1'>Outside of Australia</option>");
-                    $("#divStateAlert").show();
-                    $("#btnSubmitAlertJob").removeAttr("disabled");
-                } else {
-                    $("#ddl-state").html("");
-                    $("#divStateAlert").hide();
-                    $("#btnSubmitAlertJob").attr("disabled", "disabled");
-                }
-            });
-            $("#ddl-state").change(function () {
-                if ($("#ddl-state").val() == "0") {
-                    $("#btnSubmitAlertJob").attr("disabled", "disabled");
-                } else {
-                    $("#btnSubmitAlertJob").removeAttr("disabled");
-                }
-            });
-
-            $("#btnSubmitAlertJob").click(function (e) {
-                e.stopPropagation();
-                e.preventDefault();
-                Ultil.JobAlertRegistration($("#re_captcha_signup").find(".g-recaptcha-response").val(), $("#txtEmailAlertFloating"), $("#lblMessageAlert"), "", $("#btnSubmitAlertJob"));
-            });
-
-            $("#btnCreateAlert").click(function (e) {
-                e.stopPropagation();
-                e.preventDefault();
-                Ultil.CheckJobAlertEmail($("#re_captcha_signup").find(".g-recaptcha-response").val(), $("#txtEmailAlertFloating"), $("#lblMessageAlertFloating"), $("#btnCreateAlert"));
-            });
-
-            $("#txtEmailAlertFloating").keypress(function (e) {
-                e.stopPropagation();
-                if (e.keyCode === 13) {
-                    e.preventDefault();
-                    Ultil.CheckJobAlertEmail($("#re_captcha_signup").find(".g-recaptcha-response").val(), $("#txtEmailAlertFloating"), $("#lblMessageAlertFloating"), $("#btnSubmitAlertJob"));
-                }
-            });
-
-            $("#btnCreateAlertFloating").click(function (e) {
-                e.stopPropagation();
-                e.preventDefault();
-                Ultil.CheckJobAlertEmail($("#re_captcha_signup_float").find(".g-recaptcha-response").val(), $("#txtEmailAlertFloating"), $("#lblMessageAlert"), $("#btnCreateAlert"));
-            });
-
-            $("#txtEmailAlert").keypress(function (e) {
-                e.stopPropagation();
-                if (e.keyCode === 13) {
-                    e.preventDefault();
-                    Ultil.CheckJobAlertEmail($("#re_captcha_signup_float").find(".g-recaptcha-response").val(), $("#txtEmailAlertFloating"), $("#lblMessageAlert"));
-                }
-            });
-
-            JobAlertController.Init();
-            JobAlertController.InitQuickSignUpBox();
-
-            $(".master-country").empty();
-
-            $(".iframe-youtube").each(function () {
-                //var url = $(this).attr("href").replace("watch?v=", "embed/");
-                //var youtubeId = $(this).attr("href").split("v=")[1].split("?")[0].split("&")[0];
-                //html += '<iframe id="' + youtubeId + '" width="900" height="507" src="' + url + '" frameborder="0" allowfullscreen></iframe>';
-                if ($(this).find("img").next().attr("src") == "") {
-                    $(this).html("");
-                }
-
-                $(this).click(function (e) {
-                    e.preventDefault();
-                    e.stopPropagation();
-                    var url = $(this).attr("href").replace("watch?v=", "embed/");
-                    var youtubeId = $(this).attr("href").split("v=")[1].split("?")[0].split("&")[0];
-                    $("#show-iframe-youtube").find("iframe").attr("src", url);
-                    $("#show-iframe-youtube").show();
-                    $(".bg-overfow").show();
-                    trackYouTube();
-                    onYouTubeIframeAPIReady();
-                });
-            });
-
-
-            $(".bg-overfow").click(function (e) {
-                e.preventDefault();
-                $(".bg-overfow").hide();
-                $("#show-iframe-youtube").hide();
-                $("#show-iframe-youtube div.video-container iframe").attr('src', '');
-                removeListenerIframeAPI();
-                videoArray = new Array();
-                yoobtoob = [], _yti = 0;
-                $("#youtube_container").html('<iframe  width="900" height="507" src="" frameborder="0" allowfullscreen></iframe>');
-            });
-
-            $(".close-iframe").click(function (e) {
-                e.preventDefault();
-                $(".bg-overfow").hide();
-                $("#show-iframe-youtube").hide();
-                $("#show-iframe-youtube div.video-container iframe").attr('src', '');
-                removeListenerIframeAPI();
-                videoArray = new Array();
-                yoobtoob = [], _yti = 0;
-                $("#youtube_container").html('<iframe  width="900" height="507" src="" frameborder="0" allowfullscreen></iframe>');
-            });
-
-            $('#LinkCancelID').on('click', function () {
-                $("#<%=lblMessage.ClientID %>").hide();
-                $("#sendEmailModal").modal('hide');
-
-                return false;
-            });
-
-            $('#sendEmailModal').on('hidden.bs.modal', function () {
-                SendEmailControl.ClearEmailToFriendForm($("#<%= txtFriendName.ClientID %>"), $("#<%= txtFriendEmail.ClientID %>"), $("#<%= txtUsername.ClientID %>"), $("#<%= txtUserEmail.ClientID %>"), recapchar_sendmailFriend);
-            });
-
-
-            $(".sendmail").click(function (event) {
-                var id = $(this).attr('id');
-                $('#hdsendEmailID').val(id);
-            });
-
-            $("#<%= btnSend.ClientID %>").click(function () {
-                SendEmailControl.SendEmailToFriend($("#<%= txtFriendName.ClientID %>"), $("#<%= txtFriendEmail.ClientID %>"), $("#re_captcha_sendemail_tofriend").find(".g-recaptcha-response").val(), $("#<%= txtUsername.ClientID %>"), $("#<%= txtUserEmail.ClientID %>"), $('#hdsendEmailID'), recapchar_sendmailFriend);
-                return false;
-
-            });
-            function hideJobsRemain() {
-                var lastPaidJob = $("div.jobDetailInSearchPage div.special:last").addClass("lastPaid");
-                var indexOfLastPaidJob = 0;
-                var numOfRemainJobs = 0;
-                var numOfFeatureJobs = 0;
-                $(".jobDetailInSearchPage").each(function (idx, elm) {
-                    if ($(elm).find('div.lastPaid').length !== 0) {
-                        numOfFeatureJobs = $(elm).find('div.lastPaid').length;
-                        indexOfLastPaidJob = idx;
-                    }
-                    if (numOfFeatureJobs > 0 && idx > indexOfLastPaidJob) {
-                        $(elm).hide();
-                        numOfRemainJobs++;
-                    }
-                });
-                if ($("div.content-search-view.paid").not('.special').length === 0 || numOfRemainJobs === 0) {
-                    $("#btnShowMoreRemainJobs").hide();
-                }
-                else {
-                    $("#lbNumOfRemainJobs").text(numOfRemainJobs);
-                    $("#btnShowMoreRemainJobs").show();
-                }
-            }
-
-            $("#btnShowMoreRemainJobs").on("click", function (e) {
-                e.preventDefault();
-                e.stopPropagation();
-                $(".jobDetailInSearchPage").each(function (idx, elm) {
-                    if ($(elm).css("display") === "none") {
-                        $(elm).show();
-                    }
-                });
-                $("#btnShowMoreRemainJobs").hide();
-            });
-            $(".form-email-jobs .close-form").click(function () {
-                fixMobileDisplay();
-            });
-
-            $(window).scroll(function () {
-                fixMobileDisplay();
-            });
-            fixMobileDisplay();
-
-            $(window).load(function () {
-                $('.ajax-loading').css('display', 'none');
-                var re_captcha_signup_float;
-                var re_captcha_signup;
-                var recapchar_sendmailFriend;
-
-                var jtTarget = '<%=JobTypeTargetAds %>'
-                var jstTarget = '<%=JobSubTypeTargetAds %>'
-                var jstateTarget = '<%=StateTargetAds %>'
-                var jcityTarget = '<%=CityTargetAds %>'
-                //set googledouble click ads
-                if (jtTarget.length > 0) {
-                    googletag.pubads().setTargeting('category1', jtTarget);
-                }
-                if (jstTarget.length > 0) {
-                    googletag.pubads().setTargeting('category2', jstTarget);
-                }
-                if (jstateTarget.length > 0) {
-                    googletag.pubads().setTargeting('location1', jstateTarget);
-                }
-                if (jcityTarget.length > 0) {
-                    googletag.pubads().setTargeting('location2', jcityTarget);
-                }
-                <%=GetGoogleClickAdsScript("SearchPage MedRec ads 300x600") %>
-                <%=GetGoogleClickAdsScript("SearchPage MedRec ads 300x250") %>
-                <%=GetGoogleClickAdsScript("Job search  banner ads Top 728x90") %>
-                <%=GetGoogleClickAdsScript("JobDetail LeaderBroad Footer 728x90") %>
-                <%=GetGoogleClickAdsScript("Job search  banner ads after every 5 jobs 728x90") %>
-                <%=GetGoogleClickAdsScript("Job search Native ad  after 1th job") %>
-                <%=GetGoogleClickAdsScript("JobSearch Police ads 300x250") %>
-                //hideJobsRemain();
-            });
-        });
-    </script>
+    
 </body>
 </html>
