--- a/09_Theme_08_v2/Views/Product/Checkout.cshtml
+++ b/09_Theme_08_v2/Views/Product/Checkout.cshtml
@@ -94,7 +94,7 @@
                                         <label for="radio_button_51"><input type="radio" name="radio_4" id="radio_button_51" value="4" data-ship="0"> Chuyển khoản <a href="/PaymentInfo">( Hướng dẫn chuyển khoản )</a></label>
                                     </li>
                                     <li class="lb2">
-                                        <label for="radio_button_6"><input type="radio" name="radio_4" id="radio_button_6" value="1" data-ship="15000"> Thu tiền tại nhà</label>
+                                        <label for="radio_button_6"><input type="radio" name="radio_4" id="radio_button_6" value="1" data-ship="0"> Thu tiền tại nhà (COD)</label>
                                     </li>
                                     @if (ViewBag.PaymentType == "NL")
                                     {
@@ -259,8 +259,6 @@
                                             </ul>
                                         </li>
                                     }
-
-
                                 </ul>
                             </div>
                         </div>
