--- a/06_Shop_Onepage/Views/Home/Index.cshtml
+++ b/06_Shop_Onepage/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
             <div class="col-xs-12 col-sm-4 xs-bottom-40 wow fadeIn">
                 <div class="single-service">
                     <div class="service-photo">
-                        <a href="/hat-giong-c55" class="read-more">  <img src="https://media.anpero.com/images/29/82018/seed100x1002018082017502539.png" alt="pet" style="height:100px;"></a>
+                        <a href="/hat-giong-c55" class="read-more">  <img src="//media.anpero.com/images/29/92018/s2018091802034836.jpg" alt="pet" style="height:100px;"></a>
                     </div>
                     <h2>Hạt giống</h2>
                     <p>Củ và hạt giống được nhập từ các công ty uy tín nhất thế giới. Đảm bảo tỷ lệ nảy mầm cao. </p>
@@ -39,7 +39,7 @@
             <div class="col-xs-12 col-sm-4 xs-bottom-40 xs-bottom-40 wow fadeIn">
                 <div class="single-service">
                     <div class="service-photo">
-                        <a href="/rau-cu-huu-co-c242" class="read-more">  <img src="https://media.anpero.com/images/29/82018/food2018082018084711.png" alt="pet" style="height:100px;"></a>
+                        <a href="/rau-cu-huu-co-c242" class="read-more">  <img src="//media.anpero.com/images/29/92018/12018091900344091.jpg" alt="pet" style="height:100px;"></a>
                     </div>
                     <h2>Thực phẩm</h2>
                     <p>Rau củ, gia cầm, và trứng gia cầm hữu cơ luôn tươi ngon, được <strong>OFREZH</strong> quản lý chất lượng nghiêm khắc từ khâu hạt giống. </p>
@@ -49,7 +49,7 @@
             <div class="col-xs-12 col-sm-4 xs-bottom-40  wow fadeIn">
                 <div class="single-service">
                     <div class="service-photo">
-                        <a href="/phan-trun-que-c56" class="read-more"><img src="https://media.anpero.com/images/38/72018/worm2018071020105847.png" alt="pet" style="height:100px;"></a>
+                        <a href="/phan-trun-que-c56" class="read-more"><img src="//media.anpero.com/images/29/92018/12018091802090567.jpg" alt="pet" style="height:100px;"></a>
                     </div>
                     <h2>Phân trùn quế</h2>
                     <p>Bổ xung dưỡng chất cho đất một cách bền vững, tăng tỷ lệ nảy mầm cho hạt giống, giúp cây to khỏe.</p>
@@ -84,7 +84,7 @@
                 </div>
             </div>
             <div class="col-xs-12 col-sm-6 text-right wow fadeIn">
-                <img src="//media.anpero.com/images/29/92018/about2018090402260971.jpg" />
+                <img src="//media.anpero.com/images/29/92018/banner2018091823261027.png" />
             </div>
         </div>
     </div>
