--- a/09_Theme_08_v2/Views/Product/SearchAjax.cshtml
+++ b/09_Theme_08_v2/Views/Product/SearchAjax.cshtml
@@ -8,10 +8,10 @@
                 <li>
                     <a href="#">Tên<span class="right-arrow"></span></a>
                     <ul>
-                        <li><a href="javascript:Search.setOrder('nameDesc');">Tên</a></li>
-                        <li><a href="javascript:Search.setOrder('pricedesc');">Giá giảm dần</a></li>
-                        <li><a href="javascript:Search.setOrder('pricedasc');">Giá tăng dần</a></li>
-                        <li><a href="javascript:Search.setOrder('timeDesc');">Mới nhất</a></li>
+                        <li><a href="javascript:Search.setOrder('nameDesc');" data-ajax="nameDesc">Tên</a></li>
+                        <li><a href="javascript:Search.setOrder('pricedesc');" data-ajax="pricedesc">Giá giảm dần</a></li>
+                        <li><a href="javascript:Search.setOrder('pricedasc');" data-ajax="pricedasc">Giá tăng dần</a></li>
+                        <li><a href="javascript:Search.setOrder('timeDesc');" data-ajax="timeDesc">Mới nhất</a></li>
                     </ul>
                 </li>
             </ul>
